crates/solidity/testing/snapshots/bindings_output/using/for_fixed_arrays/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[input.sol:5:1]
   │
 5 │ ╭─▶ using ArrayHelper for string[1];
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ library ArrayHelper {
   │         ─────┬─────  
   │              ╰─────── name: 1
 2 │     function asArray(string[1] memory items) internal {}
   │              ───┬───                  ──┬──  
   │                 ╰──────────────────────────── name: 2
   │                                         │    
   │                                         ╰──── name: 3
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─▶ library ArrayHelper {
 2 │ │       function asArray(string[1] memory items) internal {}
   │ │   ────────────────────────────┬───┬────────────────────────  
   │ │                               ╰────────────────────────────── definiens: 2
   │ │                                   │                          
   │ │                                   ╰────────────────────────── definiens: 3
 3 │ ├─▶ }
   │ │       
   │ ╰─────── definiens: 1
───╯
